istio/fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
    - nginx-service
  http:
    - fault:
        #delay:
        #  percent: 50
        #  fixedDelay: 5s
        abort:
          percentage: 
            value: 100
          httpStatus: 500
      route:
        - destination:
            host: nginx-service
            subset: todas
    
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: x-user
  subsets:
  - name: todas
    labels:
      app: nginx
